lil aesthetic fix on firefox

--- a/styles/partials/elements/_Tags.scss
+++ b/styles/partials/elements/_Tags.scss
@@ -23,6 +23,9 @@
   @include safari{
     padding: 0.25rem 0.5rem 0.365rem 0.5rem;
   }
+  @include firefox{
+    padding: 0.3rem 0.5rem 0.265rem 0.5rem;
+  }
 
   
   @include s;
