--- a/styles/style.css
+++ b/styles/style.css
@@ -2119,6 +2119,10 @@ h3 + .studypanel--paragraph {
   padding: 0.25rem 0.5rem 0.365rem 0.5rem;
 }
 
+.firefox .tag {
+  padding: 0.3rem 0.5rem 0.265rem 0.5rem;
+}
+
 .tag__tool {
   padding: 0.4rem 0.55rem 0.25rem 0.55rem;
   border-radius: 100rem;
